assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Rules useless in parser due to conflicts

   18 expressions: %empty


State 10 conflicts: 2 shift/reduce
State 16 conflicts: 2 shift/reduce
State 48 conflicts: 15 shift/reduce
State 103 conflicts: 10 reduce/reduce
State 128 conflicts: 9 shift/reduce
State 140 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | error

    7 dummy_feature_list: %empty
    8                   | feature ';'
    9                   | dummy_feature_list feature ';'

   10 feature: OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expression
   12        | OBJECTID '(' formals ')' ':' TYPEID '{' expression '}'
   13        | error

   14 formals: %empty
   15        | formal
   16        | formals ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expressions: %empty
   19            | expression ';'
   20            | expressions expression ';'

   21 nonEmptyExprList: expression ';'
   22                 | expressions expression ';'
   23                 | error

   24 letInner: OBJECTID ':' TYPEID IN expression
   25         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26         | OBJECTID ':' TYPEID ',' letInner
   27         | OBJECTID ':' TYPEID ASSIGN expression ',' letInner

   28 cases: case ';'
   29      | cases case ';'

   30 case: OBJECTID ':' TYPEID DARROW expression

   31 argList: %empty
   32        | expression
   33        | argList ',' expression

   34 expression: OBJECTID ASSIGN expression
   35           | expression '.' OBJECTID '(' argList ')'
   36           | expression '@' TYPEID '.' OBJECTID '(' argList ')'
   37           | OBJECTID '(' argList ')'
   38           | IF expression THEN expression ELSE expression FI
   39           | WHILE expression LOOP expression POOL
   40           | WHILE expression LOOP error
   41           | '{' nonEmptyExprList '}'
   42           | LET letInner
   43           | CASE expression OF cases ESAC
   44           | NEW TYPEID
   45           | ISVOID expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | '~' expression
   51           | expression '<' expression
   52           | expression LE expression
   53           | expression '=' expression
   54           | NOT expression
   55           | '(' expression ')'
   56           | OBJECTID
   57           | INT_CONST
   58           | STR_CONST
   59           | BOOL_CONST
   60           | error


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 35 36 37 55
    ')' (41) 12 35 36 37 55
    '*' (42) 48
    '+' (43) 46
    ',' (44) 16 26 27 33
    '-' (45) 47
    '.' (46) 35 36
    '/' (47) 49
    ':' (58) 10 11 12 17 24 25 26 27 30
    ';' (59) 4 5 8 9 19 20 21 22 28 29
    '<' (60) 51
    '=' (61) 53
    '@' (64) 36
    '{' (123) 4 5 12 41
    '}' (125) 4 5 12 41
    '~' (126) 50
    error (256) 6 13 23 40 60
    CLASS (258) 4 5
    ELSE (259) 38
    FI (260) 38
    IF (261) 38
    IN (262) 24 25
    INHERITS (263) 5
    LET (264) 42
    LOOP (265) 39 40
    POOL (266) 39
    THEN (267) 38
    WHILE (268) 39 40
    CASE (269) 43
    ESAC (270) 43
    OF (271) 43
    DARROW (272) 30
    NEW (273) 44
    ISVOID (274) 45
    STR_CONST <symbol> (275) 58
    INT_CONST <symbol> (276) 57
    BOOL_CONST <boolean> (277) 59
    TYPEID <symbol> (278) 4 5 10 11 12 17 24 25 26 27 30 36 44
    OBJECTID <symbol> (279) 10 11 12 17 24 25 26 27 30 34 35 36 37 56
    ASSIGN (280) 11 25 27 34
    NOT (281) 54
    LE (282) 52
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    dummy_feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8 9
    formals <formals> (51)
        on left: 14 15 16
        on right: 12 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expressions <expressions> (53)
        on left: 18 19 20
        on right: 20 22
    nonEmptyExprList <expressions> (54)
        on left: 21 22 23
        on right: 41
    letInner <expression> (55)
        on left: 24 25 26 27
        on right: 26 27 42
    cases <cases> (56)
        on left: 28 29
        on right: 29 43
    case <case_> (57)
        on left: 30
        on right: 28 29
    argList <expressions> (58)
        on left: 31 32 33
        on right: 33 35 36 37
    expression <expression> (59)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 11 12 19 20 21 22 24 25 27 30 32 33 34 35 36 38 39 40 43 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (dummy_feature_list)]
    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 14
    feature             go to state 15


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 16


State 12

   13 feature: error .

    $default  reduce using rule 13 (feature)


State 13

   10 feature: OBJECTID . ':' TYPEID
   11        | OBJECTID . ':' TYPEID ASSIGN expression
   12        | OBJECTID . '(' formals ')' ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 17
    '('  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 19

    feature  go to state 20


State 15

    8 dummy_feature_list: feature . ';'

    ';'  shift, and go to state 21


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (dummy_feature_list)]
    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 22
    feature             go to state 15


State 17

   10 feature: OBJECTID ':' . TYPEID
   11        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 23


State 18

   12 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 24

    $default  reduce using rule 14 (formals)

    formals  go to state 25
    formal   go to state 26


State 19

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 27


State 20

    9 dummy_feature_list: dummy_feature_list feature . ';'

    ';'  shift, and go to state 28


State 21

    8 dummy_feature_list: feature ';' .

    $default  reduce using rule 8 (dummy_feature_list)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 29

    feature  go to state 20


State 23

   10 feature: OBJECTID ':' TYPEID .
   11        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 10 (feature)


State 24

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 25

   12 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expression '}'
   16 formals: formals . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


State 26

   15 formals: formal .

    $default  reduce using rule 15 (formals)


State 27

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 28

    9 dummy_feature_list: dummy_feature_list feature ';' .

    $default  reduce using rule 9 (dummy_feature_list)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 34


State 30

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 50


State 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 51


State 32

   12 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 52


State 33

   16 formals: formals ',' . formal

    OBJECTID  shift, and go to state 24

    formal  go to state 53


State 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 35

   60 expression: error .

    $default  reduce using rule 60 (expression)


State 36

   38 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 54


State 37

   42 expression: LET . letInner

    OBJECTID  shift, and go to state 55

    letInner  go to state 56


State 38

   39 expression: WHILE . expression LOOP expression POOL
   40           | WHILE . expression LOOP error

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 57


State 39

   43 expression: CASE . expression OF cases ESAC

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 58


State 40

   44 expression: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 41

   45 expression: ISVOID . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 60


State 42

   58 expression: STR_CONST .

    $default  reduce using rule 58 (expression)


State 43

   57 expression: INT_CONST .

    $default  reduce using rule 57 (expression)


State 44

   59 expression: BOOL_CONST .

    $default  reduce using rule 59 (expression)


State 45

   34 expression: OBJECTID . ASSIGN expression
   37           | OBJECTID . '(' argList ')'
   56           | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 56 (expression)


State 46

   54 expression: NOT . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 63


State 47

   50 expression: '~' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 64


State 48

   41 expression: '{' . nonEmptyExprList '}'

    error       shift, and go to state 65
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    error       [reduce using rule 18 (expressions)]
    IF          [reduce using rule 18 (expressions)]
    LET         [reduce using rule 18 (expressions)]
    WHILE       [reduce using rule 18 (expressions)]
    CASE        [reduce using rule 18 (expressions)]
    NEW         [reduce using rule 18 (expressions)]
    ISVOID      [reduce using rule 18 (expressions)]
    STR_CONST   [reduce using rule 18 (expressions)]
    INT_CONST   [reduce using rule 18 (expressions)]
    BOOL_CONST  [reduce using rule 18 (expressions)]
    OBJECTID    [reduce using rule 18 (expressions)]
    NOT         [reduce using rule 18 (expressions)]
    '~'         [reduce using rule 18 (expressions)]
    '{'         [reduce using rule 18 (expressions)]
    '('         [reduce using rule 18 (expressions)]

    expressions       go to state 66
    nonEmptyExprList  go to state 67
    expression        go to state 68


State 49

   55 expression: '(' . expression ')'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 69


State 50

   11 feature: OBJECTID ':' TYPEID ASSIGN expression .
   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 11 (feature)


State 51

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 52

   12 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 79


State 53

   16 formals: formals ',' formal .

    $default  reduce using rule 16 (formals)


State 54

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   38           | IF expression . THEN expression ELSE expression FI
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    THEN  shift, and go to state 80
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 55

   24 letInner: OBJECTID . ':' TYPEID IN expression
   25         | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26         | OBJECTID . ':' TYPEID ',' letInner
   27         | OBJECTID . ':' TYPEID ASSIGN expression ',' letInner

    ':'  shift, and go to state 81


State 56

   42 expression: LET letInner .

    $default  reduce using rule 42 (expression)


State 57

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   39           | WHILE expression . LOOP expression POOL
   40           | WHILE expression . LOOP error
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LOOP  shift, and go to state 82
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 58

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   43           | CASE expression . OF cases ESAC
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    OF   shift, and go to state 83
    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78


State 59

   44 expression: NEW TYPEID .

    $default  reduce using rule 44 (expression)


State 60

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   45           | ISVOID expression .
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 45 (expression)


State 61

   34 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 84


State 62

   37 expression: OBJECTID '(' . argList ')'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    ')'  reduce using rule 31 (argList)
    ','  reduce using rule 31 (argList)

    argList     go to state 85
    expression  go to state 86


State 63

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression
   54           | NOT expression .

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 54 (expression)


State 64

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | '~' expression .
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 50 (expression)


State 65

   23 nonEmptyExprList: error .
   60 expression: error .

    '}'       reduce using rule 23 (nonEmptyExprList)
    $default  reduce using rule 60 (expression)


State 66

   20 expressions: expressions . expression ';'
   22 nonEmptyExprList: expressions . expression ';'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 87


State 67

   41 expression: '{' nonEmptyExprList . '}'

    '}'  shift, and go to state 88


State 68

   19 expressions: expression . ';'
   21 nonEmptyExprList: expression . ';'
   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78
    ';'  shift, and go to state 89


State 69

   35 expression: expression . '.' OBJECTID '(' argList ')'
   36           | expression . '@' TYPEID '.' OBJECTID '(' argList ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression
   55           | '(' expression . ')'

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78
    ')'  shift, and go to state 90


State 70

   52 expression: expression LE . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 91


State 71

   51 expression: expression '<' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 92


State 72

   53 expression: expression '=' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 93


State 73

   46 expression: expression '+' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 94


State 74

   47 expression: expression '-' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 95


State 75

   48 expression: expression '*' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 96


State 76

   49 expression: expression '/' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 97


State 77

   36 expression: expression '@' . TYPEID '.' OBJECTID '(' argList ')'

    TYPEID  shift, and go to state 98


State 78

   35 expression: expression '.' . OBJECTID '(' argList ')'

    OBJECTID  shift, and go to state 99


State 79

   12 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 100


State 80

   38 expression: IF expression THEN . expression ELSE expression FI

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 101


State 81

   24 letInner: OBJECTID ':' . TYPEID IN expression
   25         | OBJECTID ':' . TYPEID ASSIGN expression IN expression
   26         | OBJECTID ':' . TYPEID ',' letInner
   27         | OBJECTID ':' . TYPEID ASSIGN expression ',' letInner

    TYPEID  shift, and go to state 102


State 82

   39 expression: WHILE expression LOOP . expression POOL
   40           | WHILE expression LOOP . error

    error       shift, and go to state 103
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 104


State 83

   43 expression: CASE expression OF . cases ESAC

    OBJECTID  shift, and go to state 105

    cases  go to state 106
    case   go to state 107


State 84
